Fri May  4 15:38:40 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportSendStrategy.cpp:

        * dds/DCPS/transport/ReliableMulticast/detail/PacketHandler.h:
        * dds/DCPS/transport/ReliableMulticast/detail/PacketHandler.cpp:
        * dds/DCPS/transport/ReliableMulticast/detail/ReactivePacketReceiver.h:
        * dds/DCPS/transport/ReliableMulticast/detail/ReactivePacketReceiver.cpp:
        * dds/DCPS/transport/ReliableMulticast/detail/ReactivePacketSender.h:
        * dds/DCPS/transport/ReliableMulticast/detail/ReactivePacketSender.cpp:

          Renamed methods that were overriding inherited virtual methods.
          This fixes warnings from Borland and SunCC.

Thu May 03 23:50:40 UTC 2007  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/DCPS/SimpleLatency/raw_tcp/common/TestData.h:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/common/TestException.h:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/publisher/main.cpp:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/publisher/raw_tcp_latency_publisher.mpc:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/publisher/TcpPublisher.cpp:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/publisher/TcpPublisher.h:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/publisher/TestDriver.cpp:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/publisher/TestDriver.h:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/run_test_1x1.pl:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/split_pub.pl:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/subscriber/main.cpp:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/subscriber/raw_tcp_latency_subscriber.mpc:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/subscriber/TestDriver.cpp:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/subscriber/TestDriver.h: